app/assets/stylesheets/static_pages.css.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
.task-tags {
  list-style-type: none;
}

.tags{
  clear: left;
}

.tags .delete {
  cursor: pointer;
}

.tags .tag.delete {
  background: rgba(169, 68, 66, .9);
}

.tags .tag {
  background: rgba(102, 255, 153, .5);
  margin: 3px;
  border-radius: 4px;
  color: black;
  cursor: pointer;
}
.tag.active {
  background: rgba(102, 255, 153, .9);
}

.tags *{
  color: #66FF99;
  list-style-type: none;
  float: left;
  padding: 4px;
  margin-top: -3px;
}

.new-tag-form {
  float: left;
  background: rgba(100,100,100, .5);
  border-radius: 3px;
}

.new-tag-form .name {
  background: transparent;
  border: none;
  margin-top: 1px;
}

.new-tag-form .name:focus{
  outline: none;
}

.new-tag{
  cursor: pointer;
  margin-top: 1px;
}

.item-box {
  border-top: 1px solid #dddddd;
  margin-top: 10px;
  padding-top: 10px;
  height: 300px;
}

.stat-icon {
  float: left;
  padding-right: 5px;
  font-size: 14px;
}

.stat-icon.health {
  color: #d9534f;
}

.bars {
  width: 200px;
  float: left;
}
.stat-icon.xp {
  color: #f0ad4e;
}

.details, .details small {
  float: left;
  color: #66FF99;
}

.btn.add {
  margin-top: -1px;
}

.checks > span{
  opacity: 0.3;
  border: 1px solid #aaa;
  height: 100%;
  width: 100%;
  padding: 5px;
  vertical-align: middle;
  text-align: center;
  padding-top: 18px;
  background: rgba(100,100,100,.2)
}
.checks {
  float: left;
  height: 50px;
  width: 50px;
  position: relative;
  top: 0;
  left: 0;
  cursor: pointer;
  margin-top: -11px;
  margin-left: -15px;
}
.checks > *:hover {
  opacity: 1.0;
  background: rgba(100,100,100,.2);
}
.checks > span.habit {
  height: 50%;
  padding-top: 5px;
}
.checks > span.minus {
  height: 50%;
  padding-top: 5px;
}
.item {
  height: 30px;
  cursor: move;
}

.title {
  line-height: 28px;
  padding-left: 10px;
}

.task-box {
  padding: 5px;
}

.task-box .inner {
  background-color: #eee;
  border-radius: 3px;
  padding: 10px;
  opacity: .9;
}

.task-box h1 {
  margin-top: 5px;
}

.task.task-shadow {
  background: black;
  opacity: 0.2;
}

.task {
  margin-top: 5px;
}

.task .edit, .task .graph{
  visibility: hidden;
  margin: 0 5px;
  float: right;
}

.task:hover .edit, .task:hover .graph{
  visibility: visible;
  cursor: pointer;
}

.task-lists {
  float: left;
}

.popups {
  position: absolute;
  top: 70px;
  right: 30px;
  list-style-type: none;
  width: 200px;
  z-index: 20;
}

.popup {
  padding: 5px;
  margin: 5px;
  border-radius: 3px;
  width: 100%;
  box-shadow: 1px 1px 1px rgba(34, 36, 34, 0.4);
}

.popup.gold {
  background: rgba(194, 194, 30, 0.8);
}

.popup.health {
  background: rgba(221, 64, 64, 0.8);
}

.popup.xp {
  background: rgba(130, 66, 193, 0.8);
}

.popup.level {
  background: rgba(23, 149, 23, 0.8);
}

.icons > * {
  float: right;
  cursor: pointer;
}

body {
  background-image: asset-data-url("bg.jpg");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
}

.form {
  position: relative;
  top: 50%;
  transform: translateY(50%);
  margin: auto;
  background: rgba(100,100,100,.5);
  width: 400px;
  padding: 20px;
  color: #66FF99;
}

li.list-group-item-primary {
  background: #B6D6E3;
}

.editable {
  cursor: pointer;
}

